--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,26 @@
+.container {
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .container img {
   width: 300px;
   height: auto;
+}
+
+.container h2 {
+  padding: 1rem 0;
+  font-family: 'PT Sans', sans-serif;
+}
+
+.container h3 {
+  font-family: 'Edu NSW ACT Foundation', cursive;
+}
+
+@media screen and (min-width: 650px) {
+  .container img {
+    width: 500px;
+  }
 }
