--- a/src/App.css
+++ b/src/App.css
@@ -5,22 +5,35 @@
   align-items: center;
 }
 
-.container img {
+.images img {
   width: 300px;
   height: auto;
 }
 
 .container h2 {
-  padding: 1rem 0;
+  margin: 1rem 0;
   font-family: 'PT Sans', sans-serif;
 }
 
 .container h3 {
   font-family: 'Edu NSW ACT Foundation', cursive;
+  margin: 1rem 0;
+}
+
+button {
+  padding: 0.5rem;
+  margin: 0.5rem;
+  border: none;
+  background-color: whitesmoke;
+  border-radius: 7px;
+}
+
+button:hover {
+  background-color: lightsteelblue;
 }
 
 @media screen and (min-width: 650px) {
-  .container img {
-    width: 500px;
+  .images img {
+    width: 400px;
   }
 }
